--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,12 +25,10 @@
             }
         }
     </script>
-    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
-    
-    <!-- TensorFlow.js y Modelos (Versiones estables via unpkg) -->
-    <script src="https://unpkg.com/@tensorflow/tfjs@4.20.0/dist/tf.min.js"></script>
-    <script src="https://unpkg.com/@tensorflow-models/coco-ssd@2.2.3/dist/coco-ssd.min.js"></script>
-    <script src="https://unpkg.com/@tensorflow-models/pose-detection@2.1.3/dist/pose-detection.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Inter:wght@400;700;900&display=swap"
+        rel="stylesheet">
+
+    <!-- YOLOv11 & Tracking (Bundle-managed via Vite) -->
 
     <style>
         :root {
@@ -38,23 +36,39 @@
             --red-glow: rgba(239, 68, 68, 0.6);
             --purple-glow: rgba(168, 85, 247, 0.6);
         }
+
         body {
             margin: 0;
             padding: 0;
             transition: background-color 0.5s ease;
         }
-        
+
         .scan-line {
-            position: absolute; top: 0; left: 0; width: 100%; height: 3px;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 3px;
             background: #22d3ee;
             box-shadow: 0 0 20px #22d3ee, 0 0 40px rgba(34, 211, 238, 0.4);
             animation: scan 4s linear infinite;
-            z-index: 50; opacity: 0.6; pointer-events: none;
+            z-index: 50;
+            opacity: 0.6;
+            pointer-events: none;
         }
-        @keyframes scan { 0% { top: 0%; } 100% { top: 100%; } }
+
+        @keyframes scan {
+            0% {
+                top: 0%;
+            }
+
+            100% {
+                top: 100%;
+            }
+        }
 
         .hud-grid {
-            background-image: 
+            background-image:
                 linear-gradient(to right, rgba(34, 211, 238, 0.15) 1px, transparent 1px),
                 linear-gradient(to bottom, rgba(34, 211, 238, 0.15) 1px, transparent 1px);
             background-size: 50px 50px;
@@ -64,9 +78,18 @@
             box-shadow: 0 0 20px rgba(34, 211, 238, 0.15);
         }
 
-        ::-webkit-scrollbar { width: 4px; }
-        ::-webkit-scrollbar-track { background: transparent; }
-        ::-webkit-scrollbar-thumb { background: #334155; border-radius: 10px; }
+        ::-webkit-scrollbar {
+            width: 4px;
+        }
+
+        ::-webkit-scrollbar-track {
+            background: transparent;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background: #334155;
+            border-radius: 10px;
+        }
     </style>
 
     <script type="importmap">
@@ -82,10 +105,12 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/index.css">
 </head>
+
 <body class="bg-[#020617] text-slate-100">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
 </body>
+
 </html>
